# enkei

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/: FUNDING.yml
.rpm/: enkei.spec
config/: enkei.service
pkgs/archlinux/: PKGBUILD
pkgs/rpm/: enkei.spec
scripts/: install.sh  uninstall.sh
src/: bg_manager.rs  error_report.rs  image.rs  main.rs  messages.rs  metadata.rs  opengl.rs  output.rs  outputs.rs  schema.rs  timesync.rs  util.rs  watchdog.rs  worker.rs
src/bg_manager/: background_manager.rs  timesync.rs
src/image/: error.rs  image.rs  images.rs  scaling.rs  webp.rs
src/opengl/: context.rs  error.rs  shader.rs
src/schema/: gnome_xml.rs
src/util/: resource_loader.rs
src/watchdog/: ipc.rs  sleeping.rs  timer.rs
