[package]
name = "enkei-reimplementation"
version = "0.1.0"
edition = "2018"
description = "An OpenGL accelerated wallpaper tool with support for the Gnome Dyanmic Wallpaper definitions."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.30.0"
cairo-rs = "0.14.9"
chrono = "0.4.19"
clap = { version = "3.0.7", features = ["derive"] }
env_logger = "0.9.0"
ezing = "0.2.1"
getset = "0.1.2"
gl = "0.14.0"
image = "0.23.14"
khronos-egl = { version = "4.1.0", features = ["static"] }
lazy-regex = "2.2.2"
log = "0.4.14"
memfd = "0.4.1"
send_wrapper = "0.5.0"
serde = { version = "1.0.131", features = ["derive"] }
serde-xml-rs = "0.5.1"
tempfile = "3.2.0"
thiserror = "1.0.30"
wayland-client = "0.29.0"
wayland-egl = "0.29.1"
wayland-protocols = { version = "0.29.0", features = ["client", "unstable_protocols", "wayland-client"] }

[features]
